k8s/networking/network-policy-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: network-policy
  labels:
    app: frontend
spec:
  containers:
    - name: nginx
      image: nginx:stable-alpine3.20-perl

---
apiVersion: v1
kind: Pod
metadata:
  name: busybox-pod
  namespace: network-policy
  labels:
    app: client
spec:
  containers:
    - name: busybox
      image: busybox:latest
      command: ["sleep", "3600"]
