k8s/networking/pods-dns.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-nodename
spec:
  containers:
    - name: nginx
      image: nginx:stable-alpine3.20-perl

---
apiVersion: v1
kind: Pod
metadata:
  name: frontend-app
spec:
  containers:
    - name: app
      image: alpine:latest
      command: ["sleep", "3600"]
